# ollama-voice-chess

./: .gitignore  chess_vs_ollama.py  pyproject.toml  requirements.txt  setup.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.js
frontend/src/lib/components/: AnnotationPanel.svelte  ChessBoard.svelte  Modal.svelte  Piece.svelte  Square.svelte
frontend/src/lib/modals/: ConfirmModal.svelte  GameOverModal.svelte  ReviewModal.svelte  TrainingModal.svelte
frontend/src/lib/screens/: GameScreen.svelte  ReviewScreen.svelte  SetupScreen.svelte  TrainingScreen.svelte
frontend/src/lib/stores/: annotations.js  app.js  game.js  review.js  training.js
games/: current_game.pgn
server/: __init__.py  analysis.py  cli.py  debug_cli.py  engine.py  game.py  main.py  ollama_client.py  openings.py  spaced_repetition.py  stats.py  tactics.py  training.py  tts.py
static/: index.html
training_games/: queens_gambit_20260207_214301.pgn
